feat: add hold-seat API with Redis 5-minute ticket holding logic