@@ -8,11 +8,15 @@ import vn.hcmute.cinema_booking_api.repository.SeatRepository;
 
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class SeatService {
     @Autowired
     private SeatRepository seatRepository;
+
+    @Autowired
+    private TicketHoldService ticketHoldService;
 
     public List<SeatDTO> findAll() {
         List<Seat> seats = seatRepository.findAll();
@@ -26,13 +30,28 @@ public class SeatService {
 
     public List<SeatDTO> getAvailableSeatsByShowtimeId(Long showTimeId) {
         return seatRepository.findAvailableSeatsByShowtimeId(showTimeId).stream()
+                .filter(seat -> ticketHoldService.getHeldTicket(seat.getSeatId(), showTimeId) == null)
+                //String key = "hold:ticket:" + showTimeId + ":" + seat.getSeatId();
+                //return !Boolean.TRUE.equals(redisTemplate.hasKey(key));
                 .map(seat -> new SeatDTO(seat.getSeatCode()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<SeatDTO> getNotAvailableSeatsByShowTimeId(Long showTId){
-        return seatRepository.findNotAvailableSeatByShowTimeId(showTId).stream()
+        List<Seat> bookedSeats = seatRepository.findNotAvailableSeatByShowTimeId(showTId);//Seat in BookedSeat
+
+        //Get Seat in redis
+        List<Seat> availableSeats = seatRepository.findAvailableSeatsByShowtimeId(showTId);
+        List<Seat> heldSeats = availableSeats.stream()
+                .filter(seat -> ticketHoldService.getHeldTicket(seat.getSeatId(), showTId) != null)
+                .toList();
+
+        return Stream.concat(bookedSeats.stream(), heldSeats.stream())
                 .map(seat -> new SeatDTO(seat.getSeatCode()))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Seat findSeatBySeatCode(String seatCode) {
+        return seatRepository.findSeatBySeatCode(seatCode).orElseThrow(() -> new RuntimeException("Seat Not Found"));
     }
 }
